# ext-oauth2

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  README.md  pyproject.toml
disnake/ext/oauth2/: __init__.py
oauth2/: __init__.py  _http.py  appinfo.py  asset.py  channel.py  client.py  connection.py  dm_channel.py  file.py  guild.py  integration.py  mixins.py  scopes.py  session.py  team.py  token.py  user.py  utils.py
oauth2/types/: __init__.py  appinfo.py  channel.py  connection.py  emoji.py  guild.py  i18n.py  integration.py  payloads.py  role.py  sticker.py  team.py  user.py
scripts/: symlink.py
src/disnake/ext/oauth2/: __init__.py  _http.py  client.py  token.py
src/disnake/ext/oauth2/types/: __init__.py  payloads.py
